--- a/webcomponents/inline-editor/src/components/inline-editor/deckdeckgo-inline-editor.scss
+++ b/webcomponents/inline-editor/src/components/inline-editor/deckdeckgo-inline-editor.scss
@@ -120,7 +120,7 @@ div.deckgo-tools {
     background-image: linear-gradient(to bottom, var(--deckgo-inline-editor-mobile-background-top, #fff), var(--deckgo-inline-editor-mobile-background-bottom, #fff));
 
     button {
-      color: inherit;
+      color: var(--deckgo-inline-editor-button-mobile-color, inherit);
       padding: 0 4px;
 
       &.active {
